# kg-edu

./: .env.docker  .gitignore  CLAUDE.md  DOCKER_SETUP.md  build-images.sh  docker-compose.yml  erl_crash.dump  load-images.sh  transfer-images.sh
.github/workflows/: deploy-uat.yml
agent/: .env  README.md  chat_graph.py  main.py  models.py  pyproject.toml  test_agent.py
backend/kg_edu/: .dockerignore  .env  .formatter.exs  .gitignore  .rules  CLAUDE.md  Dockerfile  LEARNING_STATS_FEATURE.md  README.md  README_LLM_IMPORT.md  SUPER_ADMIN_SETUP.md  USAGE_EXAMPLE.md  XMIND_IMPORT_README.md  build.sh  create_demo.exs  create_demo_excel.py  demo.csv  find_courses_with_data.exs  import_opml_example.exs  livebook.livemd  mix.exs  mux.env  opml_usage_example.exs  sample_knowledge.opml  simple_test.exs  simple_verify.exs  test_fixed_stats.exs  test_learning_stats.exs  test_learning_stats_with_tenant.exs  test_llm_import.exs  test_opml_import.exs  test_return_format.exs  test_simple.exs  test_xmind.exs  verify_import.exs  xmind.xmind
backend/kg_edu/assets/: package-lock.json  tsconfig.json
backend/kg_edu/config/: config.exs  deploy.yml  dev.exs  prod.exs  runtime.exs  test.exs
backend/kg_edu/examples/: business.opml  languages.opml  mathematics.opml  science.opml  xmind.opml
config/: deploy.yml
frontend/kg-edu-ui/: PERMISSIONS.md  README.md  openapi.config.ts  package-lock.json  package.json
nginx/: nginx.conf
nginx/conf.d/: kg-edu.conf
prd/: knowledge-resource-system.md
shared_data/: README.md  fetch-schema.sh  openapi-schema.json
(+416 files in other folders)
